<resources>
    <string name="app_name">TrabajoSeguro</string>
    <string name="title_activity_interfaz_usuario">InterfazUsuarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Login-->
    <string name="pregunta"> ¿Buscas trabajo?</string>
    <string name="respuesta"> Le brindramos una variedad de oportunidades en Trabaja Seguro</string>
    <string name="btnBuscas"> Encontrar Trabajo</string>
    <string name="ingresar"> Ingresar</string>
    <string name="noCuenta">¿No tienes cuenta? Registrate</string>

    <!-- Registro-->

    <string name="titulo"> Cuenta Nueva</string>
    <string name="tituloBuscar"> Buscar Trabajo</string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rational_location</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <!-- valores de las interfaces-->
    <string name="tituloLogin">TRABAJA PERU</string>

    <string-array name="departamentos">
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurimac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Callao</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
        <item>Huánuco</item>
        <item>Ica</item>
        <item>Junín</item>
        <item>La Libertad</item>
        <item>Lambayeque</item>
        <item>Lima</item>
        <item>Loreto</item>
        <item>Madre de Dios</item>
        <item>Moquegua</item>
        <item>Pasco</item>
        <item>Piura</item>
        <item>Puno</item>
        <item>San Martín</item>
        <item>Tacna</item>
        <item>Tumbes</item>
        <item>Ucayali</item>
    </string-array>

    <!--TEXTOS -->
    <!-- ACTIVITY INTERFAZ REGISTRO-->
    <string name="IntRegistro_NuevaEmpresa">Nueva Empresa</string>
    <string name="IntRegistro_Nombre">Nombre</string>
    <string name="IntRegistro_Encargado">Encargado</string>
    <string name="IntRegistro_Correo">Correo</string>
    <string name="IntRegistro_Telefono">Telefono</string>
    <string name="IntRegistro_Ruc">RUC</string>
    <string name="IntRegistro_Usuario">Usuario</string>
    <string name="IntRegistro_Contrasena">Contraseña</string>
    <string name="IntRegistro_Descripcion">Descripcion</string>
    <string name="IntRegistro_Direccion">Direccion</string>
    <string name="IntRegistro_Departamento">Departamento</string>
    <string name="IntRegistro_Registrar">Registrar</string>

    <!-- ACTIVITY LOGIN-->
    <string name="Login_Usuario">Usuario</string>
    <string name="Login_Contrasena">Contraseña</string>
    <string name="Login_IniSesion">Iniciar Sesion</string>
    <string name="Login_BuscoTrabajo">BUSCO TRABAJO</string>

    <!-- ACTIVITY NAVIGATION DRAWER-->
    <string name="MainDrawer_Perfil">Perfil</string>
    <string name="MainDrawer_CrearA">Crear Anuncio</string>
    <string name="MainDrawer_VerA">Ver mis anuncios</string>

    <!-- MENU -->
    <string name="InterfazUsuario_Sesion">CERRAR SESION</string>


    <!-- FRAGMENT -->
    <!-- HOME -->
    <string name="Home_Empresa">Empresa:</string>
    <string name="Home_Telefono">Telefono:</string>
    <string name="Home_Departamento">Departamento:</string>


    <!-- CREAR ANUNCIO -->
    <string name="CrearAnun_Titulo">Titulo</string>
    <string name="CrearAnun_Guardar">GUARDAR</string>
    <string name="CrearAnun_Descripcion">Ingrese Descripcion</string>

</resources>