<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.proyectofinal.trabajoseguro.viewmodels.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhile"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/pregunta"
                android:textColor="@color/colorWhile"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:text="@string/respuesta"
                android:textColor="@color/colorWhile"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonBuscoTrabajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/button"
                android:onClick="@{()->login.onBuscarTrabajo()}"
                android:text="@string/btnBuscas"
                android:textColor="@color/colorWhile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="111dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logoapp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backlogin"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/Login_Usuario"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:text="@={login.loginUsuario}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorSecundaryText"
                    android:textSize="17sp"
                    app:backgroundTint="@null" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/black_w" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backlogin"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/Login_Contrasena"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text="@={login.loginContrasenia}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorSecundaryText"
                    android:textSize="17sp"
                    app:backgroundTint="@null" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/black_w" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonIniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/button"
                    android:onClick="@{()->login.onIniciarSesion()}"
                    android:text="@string/Login_IniSesion"
                    android:textColor="@color/colorWhile"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/nothing"
                    android:onClick="@{()->login.onFormularioRegistro()}"
                    android:text="@string/noCuenta"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>