<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:background="@drawable/fondovistausuario"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="98dp"
            android:layout_height="94dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/user_perfil"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/user_perfil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idInterfazUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="invisible" />

            <TextView

                android:id="@+id/encargadoInterfazUsuario"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/colorWhile"
                android:textStyle="bold"
                tools:textSize="18sp" />

            <TextView
                android:id="@+id/nombreInterfazUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</layout>